# Irodori-TTS-Server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.gpu.yaml  compose.rocm.yaml  compose.yaml  pyproject.toml
src/irodori_openai_tts/: __init__.py  __main__.py  app.py  audio.py  config.py  runtime.py  voices.py
tests/: conftest.py  test_api.py  test_audio.py  test_runtime.py  test_voices.py
